# monero-stratum

./: README.md
hashing/: CMakeLists.txt
stratum/: miner.go  proto.go
